# hoseus_discord_bot

./: Cargo.toml  Dockerfile  README.md  animation_urls.json
src/: animation.rs  config.rs  main.rs  message_helper.rs  serenity_model_helper.rs  telegram.rs
src/commands/: animations_command.rs  invite_command.rs  mod.rs  notify_command.rs  serenity_command_helper.rs
