[package]
name = "discord_door_bell"
version = "0.1.0"
authors = ["Hoseus <rjllopis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.10"
serenity = "0.7.4"
reqwest = "0.9.24"