[package]
name = "hoseus_bot"
version = "1.0.0"
authors = ["Hoseus <rjllopis@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
frankenstein = "0.20.0"
serde_json = "1.0.86"
rand = "0.8.5"
