[package]
name = "hoseus_bot"
version = "3.0.0"
authors = ["Hoseus <rjllopis@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serenity = { version = "0.12.4", default-features = false, features = ["builder", "cache", "temp_cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
frankenstein = "0.35.0"
serde_json = "1.0.133"
rand = "0.8.5"
